# tsplay.dev

./: .gitignore  .travis.yml  LICENSE  fourmolu.yaml  public-api.yml  readme.md  stack.yaml
.github/workflows/: client-build.yml  haskell.yml  server-build.yml  server-cache-persist.yml  server-publish-image.yml
client/: .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  next.config.js  now.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/scripts/: downloadReleases.js
client/src/: App.css  App.tsx  Failure.tsx  Layout.tsx  Logo.tsx  RemoteData.ts  Result.tsx  api.ts  index.css  index.tsx  mdx-components.tsx  util.ts
playground/: .eslintignore  README.md  package.json  tsconfig.json
playground-plugin/: .eslintrc  .prettierrc  README.md  rollup.config.js
playground-plugin/src/: App.tsx  Failure.tsx  ShortenedLink.tsx  storage.ts  useCopy.ts
playground/src/: App.tsx  Header.tsx  RemoteData.ts  api.ts  (+3 more)
public-api/: tsplay-public.cabal
public-api/TsplayPublic/: Api.hs  Request.hs  Response.hs
public-api/TsplayPublic/Response/: CreateShort.hs  HealthCheck.hs  ListAllShorts.hs  Stats.hs  VisitShortened.hs  VisitTsplay.hs
public-api/TsplayPublic/Schemas/: CreateRequest.hs  CreatedOn.hs  Error.hs  ShortenedUrl.hs  ShortenedUrls.hs  Stats.hs
scripts/: fmt.sh  gen-servers.sh
server/: .env.json  .envrc  .gitignore  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  database.dev.env  docker-compose.dev.yml  docker-compose.yml  package.yaml  sample.env  stack.yaml  tsplay.cabal
(+77 files in other folders)
